<resources>
    <string name="app_name">Spediteur</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_configuration">Spediteur Configuration</string>
    <string name="title_activity_server_setttings">ServerSetttings</string>

    <string name="id">Column_Id</string>
    <string name="app_id">Application Id</string>
    <string name="extraction_key">Extraction Key</string>
    <string name="server_url">Server URL</string>
    <string name="is_enabled">Server ON/OFF</string>

    <string name="prompt_applicationKey">Application Id</string>
    <string name="prompt_extractionURL">Extraction KEY</string>
    <string name="prompt_serverUrl">Server Url</string>

    <string name="saveSettings">Save</string>



</resources>
