<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ServerSetttings"
    tools:showIn="@layout/activity_server_setttings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/applicationIdLbl"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/app_id" />

            <EditText
                android:id="@+id/appIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_applicationKey"
                android:inputType="text" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/extraction_keyLbl"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/extraction_key" />

            <EditText
                android:id="@+id/extractionKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/extraction_key"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/server_urlLbl"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/server_url" />

            <EditText
                android:id="@+id/serverUrlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_serverUrl"
                android:inputType="textMultiLine" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/serverOnOffToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/is_enabled" />

        </LinearLayout>
        <Button
            android:id="@+id/saveSettingBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/saveSettings"
            android:textStyle="bold" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>